--- a/LFEFrontend/public/index.html
+++ b/LFEFrontend/public/index.html
@@ -20,7 +20,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GK Earth MOVERS</title>
+    <title>SrishtiSoft Innovations</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
